header "Grist Help Center" svg: try to fix sizing (#626)
Some people had sizing issues on this part of the UI. Didn't manage to
have it too but these rules should help making it more stable.

- the ":first-child" change is about making sure we apply these rules on
the correct DOM el (I realize when checking this that those were also
applied on the invisible "topic" part)
- the width + overflow rules are there to try to fix the actual bug

--- a/help/en/docs/css/theme.css
+++ b/help/en/docs/css/theme.css
@@ -100,14 +100,16 @@ Just keep its default of 125% font size at any breakpoint. */
 
 /* Render a custom website heading with CSS;
 this allows us to avoid overriding the whole mkdocs-material header partial just for this. */
-.md-header__title:not(.md-header__title--active) .md-header__topic .md-ellipsis {
+.md-header__title:not(.md-header__title--active) .md-header__topic:first-child .md-ellipsis {
   visibility: hidden;
 }
-.md-header__title:not(.md-header__title--active) .md-header__topic {
+.md-header__title:not(.md-header__title--active) .md-header__topic:first-child {
   background-image: url('../images/heading.svg');
   background-repeat: no-repeat;
   background-position: center left;
   background-size: 144px 24px;
+  width: 144px;
+  overflow: hidden;
 }
 
 /* fine-tune the material theme "tabs", which are the nav items in the header */
